fixed h2 elements to be larger than paragraph text on small mobile screens

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -40,7 +40,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 a {
